[package]
name = "esc_server"
version = "0.1.0"
authors = ["ryoha000 <ryoha@example.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
easy-scraper = "0.1.1"
reqwest = { version = "0.10", features = ["blocking", "json"] }
actix-web = "2.0"
actix-rt = "1.0"
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
r2d2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
