[package]
name = "esc_server"
version = "0.1.0"
authors = ["ryoha000 <ryoha@example.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
easy-scraper = "0.1.1"
html5ever = "*"
scraper = "*"

reqwest = { version = "0.10", features = ["blocking", "json"] }
actix-web = "2.0"
actix-rt = "1.0"
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15.0"
r2d2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
env_logger = "0.6.2"
chrono = { version = "*", features = ["serde"] }
rand = "0.6"
anyhow = "*"
sha2 = "*"
redis = { version = "*", features = ["r2d2"] }
r2d2_redis = "0.13.0"
